--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FinalProject</string>
+    <string name="dictionary">Merriam Webster Dictionary</string>
+    <string name="news">News Feed</string>
+    <string name="tracker">Flight Status tracker</string>
+    <string name="NYT">New York Times Article Search</string>
 </resources>
