--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">FinalProject</string>
     <string name="dictionary">Merriam Webster Dictionary</string>
     <string name="news">News Feed</string>
     <string name="tracker">Flight Status tracker</string>
     <string name="NYT">New York Times Article Search</string>
+
+//New york times search
+    <string name="Y_search">Search News</string>
+    <string name="Y_Button">Search</string>
+    <string name="Y_search_hint">search here</string>
+
+
 </resources>
